fixed compilation errors

--- a/ncert/12/13/6/4/gauss.tex
+++ b/ncert/12/13/6/4/gauss.tex
@@ -1,6 +1,13 @@
+From the given information, $X \sim \bnm{10}{\frac{9}{10}}$.
 Let,
 \begin{align}
+	\pr{X \le 6} \approx \Phi_Y\brak{6} &= \qfunc{\frac{6-9}{}}
+	\\
     Z&=\frac{X-\mu}{\sigma},\, \mu = np,\, \sigma^2 = npq
+\end{align}
+since
+\begin{align}
+	\mu = np = 9, \sigma^2 = 0.9
 \end{align}
 For large $n$, 
 \begin{align}
