started the moments chapter.

--- a/ncert/misc.tex
+++ b/ncert/misc.tex
@@ -149,4 +149,6 @@ item If two events are independent, then
 %\input {exemplar/12/13/3/70/main2.tex}
 \item Three letters are dictated to three persons and an envelope is addressed to each of them, the letters are inserted into the envelopes at random so that each envelope contains exactly one letter. Find the probability that at least one letter in its proper envelope.\\
 %\input {ncert/11/16/4/6/main.tex}
+\item If $A$, $B$ and $C$ are three independent events such that $\pr{A} = \pr{B} = \pr{C} = p$, then P(At least two of $A, B, C$ occur) = $3p^2-2p^3$\\
+% \input{exemplar/12/13/3/103/main.tex}
 \end{enumerate}
