--- a/main.tex
+++ b/main.tex
@@ -124,6 +124,12 @@ https://www.gnu.org/licenses/fdl-1.3.en.html
 \subsection{NCERT}
 \input{ncert/binomial.tex}
 \newpage
+\section{Moments}
+\subsection{Formulae}
+\input{app/moment.tex}
+\subsection{NCERT}
+\input{ncert/moment.tex}
+\newpage
     \section{Gaussian}
 \subsection{Central Limit Theorem}
 \input{app/clt.tex}
@@ -142,8 +148,6 @@ https://www.gnu.org/licenses/fdl-1.3.en.html
 \input{ncert/multi.tex}
     \section{Miscellaneous}
 \input{ncert/misc.tex}
-\section{Moments}
-\input{ncert/moment.tex}
 \section{Random Algebra}
 \subsection{Examples}
 \input{ncert/alg.tex}
