--- a/ncert/moment.tex
+++ b/ncert/moment.tex
@@ -21,7 +21,7 @@ the same chance of being chosen and the age X of the selected student is
 recorded. What is the probability distribution of the random variable X? Find
 mean, variance and standard deviation of X.
 
-\item In a meeting, 70% of the members favour and 30% oppose a certain proposal.
+\item In a meeting, 70\% of the members favour and 30\% oppose a certain proposal.
 A member is selected at random and we take X = 0 if he opposed, and X = 1 if
 he is in favour. Find E(X) and Var (X).\\
 
@@ -202,7 +202,7 @@ P(X) & $k$ & $k^{2}$ & $2k^{2}$ & $k$ \\
 % \input{exemplar/12/13/3/55/main.tex}
 \item For the following probability distribution:
 \begin{table}[!ht]
-% \input{exemplar/12/13/3/88/tables/table1.tex}
+ \input{exemplar/12/13/3/88/tables/table1.tex}
 \end{table}\\
 $E\brak{X}$ is equal to:
 \begin{enumerate}
@@ -212,11 +212,9 @@ $E\brak{X}$ is equal to:
 	\item $-1.8$ 
 \end{enumerate}
 % \input{exemplar/12/13/3/88/main.tex}
-\item If $A$, $B$ and $C$ are three independent events such that $\pr{A} = \pr{B} = \pr{C} = p$, then P(At least two of $A, B, C$ occur) = $3p^2-2p^3$\\
-% \input{exemplar/12/13/3/103/main.tex}
 \item For the following probability distribution
 \begin{table}[!htb]
-% \input{exemplar/12/13/3/89/tables/table.tex}
+ \input{exemplar/12/13/3/89/tables/table.tex}
 	\caption{Probability Distribution}
 	\label{table1:ncert/12/13/3/89/}
 \end{table}\\
@@ -227,22 +225,22 @@ E($X^{2}$)is equal to\\
 	\\	\input{exemplar/12/13/3/54/main.tex}
  \item A biased die is such that $\pr{4} = \frac{1}{10}$ and other scores being equally likely. The die is tossed twice. If X is the 'number of fours seen', find the variance of the random variable X.\\
 % \input{exemplar/12/13/3/27/main.tex}
- \item One million random numbers are generated from a statistically stationary process with a Gaussian distribution with mean zero and standard deviation $\sigma_0$.\\
-The $\sigma_0$ is estimated by randomly drawing out 10,000 number of samples ($x_n$). The estimates $\hat{\sigma}^2_1$ and $\hat{\sigma}^2_2$ are computed in the following two ways:
-\[
-\hat{\sigma}^2_1 = \frac{1}{10000} \sum_{n=1}^{10000} x_n^2
-\]
-\[
-\hat{\sigma}^2_2 = \frac{1}{9999} \sum_{n=1}^{10000} x_n^2
-\]
-Which of the following statements is true?
-\begin{enumerate}
-\item $E(\hat{\sigma}^2_2) = \sigma_0^2$ \label{eq:Option1}
-\item $E(\hat{\sigma}_2) = \sigma_0$ \label{eq:Option2}
-\item $E(\hat{\sigma}^2_1) = \sigma_0^2$ \label{eq:Option3}
-\item $E(\hat{\sigma}_1) = E(\hat{\sigma}_2)$ \label{eq:Option4}
-\end{enumerate} \hfill ( GATE EE 2023) \\
-\solution
+% \item One million random numbers are generated from a statistically stationary process with a Gaussian distribution with mean zero and standard deviation $\sigma_0$.\\
+%The $\sigma_0$ is estimated by randomly drawing out 10,000 number of samples ($x_n$). The estimates $\hat{\sigma}^2_1$ and $\hat{\sigma}^2_2$ are computed in the following two ways:
+%\[
+%\hat{\sigma}^2_1 = \frac{1}{10000} \sum_{n=1}^{10000} x_n^2
+%\]
+%\[
+%\hat{\sigma}^2_2 = \frac{1}{9999} \sum_{n=1}^{10000} x_n^2
+%\]
+%Which of the following statements is true?
+%\begin{enumerate}
+%\item $E(\hat{\sigma}^2_2) = \sigma_0^2$ \label{eq:Option1}
+%\item $E(\hat{\sigma}_2) = \sigma_0$ \label{eq:Option2}
+%\item $E(\hat{\sigma}^2_1) = \sigma_0^2$ \label{eq:Option3}
+%\item $E(\hat{\sigma}_1) = E(\hat{\sigma}_2)$ \label{eq:Option4}
+%\end{enumerate} \hfill ( GATE EE 2023) \\
+%\solution
 % \input{gate/EE/2023/25/main.tex}
 \item If X is the number of tails in three tosses of  coin, determine the standard deviation of X. \\
 % \input{exemplar/12/13/3/12/main.tex}
@@ -250,4 +248,8 @@ Which of the following statements is true?
 when a fair die is thrown. The man decided to throw a die thrice but to quit as
 and when he gets a six. Find the expected value of the amount he wins / loses.\\
 % \input{ncert/12/13/6/11/ncert.tex}
+\item Find the mean of $\bnm{4}{\frac{1}{3}}$.
+\item Two cards are drawn simultaneously (or successively without replacement) from a well shuffled pack of 52 cards. Find the mean, variance and standard deviation of the number of kings.
+\item 	Find the variance of the number obtained on a throw of an unbiased die
+\item 	Let a pair of dice be thrown and the random variable X be the sum of the numbers that appear on the two dice. Find the mean or expectation of X.
 \end{enumerate}
