moments solutions continuing

--- a/exemplar/12/13/3/13/tables/randomvar.tex
+++ b/exemplar/12/13/3/13/tables/randomvar.tex
@@ -193,18 +193,18 @@
 	&\multicolumn{1}{p{\gnumericColB}|}%
 	{\gnumericPB{\centering}\gnumbox{\textbf{Values}}}
 	&\multicolumn{1}{p{\gnumericColC}|}%
-	{\gnumericPB{\centering}\gnumbox{\textbf{Description}}}
+	{\gnumericPB{\centering}\gnumbox{\textbf{Event}}}
 \\
 \hhline{|---|}
 	 \multicolumn{1}{|p{\gnumericColA}|}%
 	{\setlength{\gnumericMultiRowLength}{0pt}%
 	 \addtolength{\gnumericMultiRowLength}{\gnumericColA}%
 	 \multirow{3}[1]{\gnumericMultiRowLength}{\parbox{\gnumericMultiRowLength}{%
-	 \gnumericPB{\centering}\gnumbox{X}}}}
+	 \gnumericPB{\centering}\gnumbox{$X$}}}}
 	&\multicolumn{1}{p{\gnumericColB}|}%
 	{\gnumericPB{\centering}\gnumbox{-1}}
 	&\multicolumn{1}{p{\gnumericColC}|}%
-	{\gnumericPB{\centering}\gnumbox{If the number 2 or 4 or 5 are rolled}}
+	{\gnumericPB{\centering}\gnumbox{$\cbrak{2, 4,  5}$ }}
 \\
 \hhline{~|--|}
 	 \multicolumn{1}{|p{\gnumericColA}|}%
@@ -212,7 +212,7 @@
 	&\multicolumn{1}{p{\gnumericColB}|}%
 	{\gnumericPB{\centering}\gnumbox{1}}
 	&\multicolumn{1}{p{\gnumericColC}|}%
-	{\gnumericPB{\centering}\gnumbox{If the number 1 or 6 are rolled}}
+	{\gnumericPB{\centering}\gnumbox{$\cbrak{1, 6}$ }}
 \\
 \hhline{~|--|}
 	 \multicolumn{1}{|p{\gnumericColA}|}%
@@ -220,7 +220,7 @@
 	&\multicolumn{1}{p{\gnumericColB}|}%
 	{\gnumericPB{\centering}\gnumbox{4}}
 	&\multicolumn{1}{p{\gnumericColC}|}%
-	{\gnumericPB{\centering}\gnumbox{If the number 3 is rolled}}
+	{\gnumericPB{\centering}\gnumbox{$\cbrak{3}$}}
 \\
 \hhline{|-|-|-|}
 \end{tabular}
