--- a/ncert/moment.tex
+++ b/ncert/moment.tex
@@ -3,40 +3,35 @@
 Find the mean number of heads in three tosses of a fair coin.
 \\
 \solution
-% \input{ncert/12/13/4/10/binom.tex}
-
-\item Two dice are thrown simultaneously. If X denotes the number of sixes, find the
-expectation of X.
-
+ \input{ncert/12/13/4/10/binom.tex}
+%
+\item Two dice are thrown simultaneously. If $X$ denotes the number of sixes, find the
+expectation of $X$.
+%
 \item Two numbers are selected at random (without replacement) from the first six
-positive integers. Let X denote the larger of the two numbers obtained. Find
-E(X).
-
-\item Let X denote the sum of the numbers obtained when two fair dice are rolled.
-Find the variance and standard deviation of X.
-
+positive integers. Let $X$ denote the larger of the two numbers obtained. Find
+$E(X)$.
+%
+\item Let $X$ denote the sum of the numbers obtained when two fair dice are rolled.
+Find the variance and standard deviation of $X$.
+%
 \item A class has 15 students whose ages are 14, 17, 15, 14, 21, 17, 19, 20, 16, 18, 20,
 17, 16, 19 and 20 years. One student is selected in such a manner that each has
-the same chance of being chosen and the age X of the selected student is
-recorded. What is the probability distribution of the random variable X? Find
-mean, variance and standard deviation of X.
-
+the same chance of being chosen and the age $X$ of the selected student is
+recorded. What is the probability distribution of the random variable $X$? Find
+mean, variance and standard deviation of $X$.
+%
 \item In a meeting, 70\% of the members favour and 30\% oppose a certain proposal.
-A member is selected at random and we take X = 0 if he opposed, and X = 1 if
-he is in favour. Find E(X) and Var (X).\\
-
+A member is selected at random and we take $X$ = 0 if he opposed, and $X$ = 1 if
+he is in favour. Find $E(X)$ and $Var(X)$.
+%
 \item In a dice game, a player pays a stake of Re 1 for each throw of a die. She receives Rs 5 if the die shows a 3, Rs 2 if the die shows a 1 or 6, and nothing otherwise. What is the player’s expected profit per throw over a long series of throws?.\\
 \solution
-% \input{exemplar/12/13/3/13/main.tex}
-
-\item A die is thrown three times. Let X be 'the number of twos seen'. Find the expectation of X.\\
+ \input{exemplar/12/13/3/13/main.tex}
+\item A die is thrown three times. Let $X$ be 'the number of twos seen'. Find the expectation of $X$.\\
 \solution
-% \input{exemplar/12/13/3/28/main.tex}
-
+ \input{exemplar/12/13/3/28/main.tex}
 Choose the correct answer in each of the following:
-
-
-
 \item The mean of the numbers obtained on throwing a die having written 1 on three
 faces, 2 on two faces and 5 on one face is
 \begin{enumerate}
@@ -44,23 +39,20 @@ faces, 2 on two faces and 5 on one face is
 \item 2
 \item 5
 \item $\frac{8}{3}$
-
 \end{enumerate}
-
+%
 \item Suppose that two cards are drawn at random from a deck of cards. Let X be the
 number of aces obtained. Then the value of E(X) is
 \begin{enumerate}
-
 \item $\frac{37}{221}$
 \item $\frac{5}{13}$
 \item $\frac{1}{13}$
 \item $\frac{2}{13}$
-
 \end{enumerate}
-
+%
 \item Suppose $10000$ tickets are sold in a lottery each for Re. $1$. First prize is of Rs $3000$ and the second prize is of Rs $2000$. There are three third prizes of Rs. $500$ each. If you buy one ticket, what is your expectation.
 % \input{exemplar/12/13/3/15/main.tex}
-\item Consider the probability distribution of a random variable X:
+\item Consider the probability distribution of a random variable $X$:
 \begin{table}[H]
         \centering
 % \input{exemplar/12/13/3/24/tables/tab.tex}
@@ -81,14 +73,14 @@ Calculate
 % \input{exemplar/12/13/3/37/tables/table.tex}
 \end{table}\\
 % \input{exemplar/12/13/3/37/main.tex}
-\item Two cards are drawn successively without replacement from a well shuffled deck of cards. Find the mean and standard variation of random variable $X$ where $X$ is the number of aces.
-% \input{exemplar/12/13/3/53/main.tex}
-\item The probability distribution of a discrete random variable X is given as under:
+\item Two cards are drawn successively without replacement from a well shuffled deck of cards. Find the mean and standard variation of random variable $$X$$ where $X$ is the number of aces.
+% \input{e$X$emplar/12/13/3/53/main.tex}
+\item The probability distribution of a discrete random variable $X$ is given as under:
 \begin{table}[ht]
     \centering
 \begin{tabular}{|c|c|c|c|c|c|c|}
 \hline
-X & 1 & 2 & 4 & 2A & 3A & 5A  \\
+$X$ & 1 & 2 & 4 & 2A & 3A & 5A  \\
 \hline
 \pr{X} & $\frac{1}{2}$ & $\frac{1}{5}$ & $\frac{3}{25}$ & $\frac{1}{10}$ & $\frac{1}{25}$ & $\frac{1}{25}$ \\
 \hline
@@ -97,7 +89,7 @@ X & 1 & 2 & 4 & 2A & 3A & 5A  \\
 Calculate:
 \begin{enumerate}
 \item The value of A if E(X) = 2.94
-\item Variance of X.
+\item Variance of $X$.
 \end{enumerate}
 % \input{exemplar/12/13/3/50/main.tex}
 \item The probability distribution of a random variable $X$ is given as under:
@@ -131,7 +123,7 @@ $P(X)$ & $\frac{1}{5}$ & $\frac{2}{5}$ & $\frac{1}{5}$ & $\frac{1}{5}$ \\
 \end{center}
 \end{minipage}
 \end{table}
-
+%
 \begin{table}[h!]
 \begin{minipage}{0.45\linewidth}
  \begin{center}
@@ -182,13 +174,13 @@ Calculate:
 \item Variance of $X$.
 \end{enumerate}
 % \input{exemplar/12/13/3/50a/main.tex}
-\item A discrete random variable X has the probability distribution given as below:
+\item A discrete random variable $X$ has the probability distribution given as below:
 \begin{table}[H]
 \begin{tabular}{|c|c|c|c|c|}
 \hline
-X & 0.5 & 1 & 1.5 & 2 \\
+$X$ & 0.5 & 1 & 1.5 & 2 \\
 \hline
-P(X) & $k$ & $k^{2}$ & $2k^{2}$ & $k$ \\
+P($X$) & $k$ & $k^{2}$ & $2k^{2}$ & $k$ \\
 \hline
 \end{tabular}
 \end{table}
@@ -198,7 +190,7 @@ P(X) & $k$ & $k^{2}$ & $2k^{2}$ & $k$ \\
 \end{enumerate}
 \solution \\
 % \input{exemplar/12/13/3/10/main.tex}
-\item There are 5 cards numbered 1 to 5, one number on one card. Two cards are drawn at random without replacement. Let X denote the sum of the numbers on two cards drawn. Find the mean and variance of X.
+\item There are 5 cards numbered 1 to 5, one number on one card. Two cards are drawn at random without replacement. Let $X$ denote the sum of the numbers on two cards drawn. Find the mean and variance of $X$.
 % \input{exemplar/12/13/3/55/main.tex}
 \item For the following probability distribution:
 \begin{table}[!ht]
@@ -223,7 +215,7 @@ E($X^{2}$)is equal to\\
 % \input{exemplar/12/13/3/89/main.tex}
 \item A die is tossed twice. A ‘success’ is getting an even number on a toss. Find the variance of the number of successes.
 	\\	\input{exemplar/12/13/3/54/main.tex}
- \item A biased die is such that $\pr{4} = \frac{1}{10}$ and other scores being equally likely. The die is tossed twice. If X is the 'number of fours seen', find the variance of the random variable X.\\
+ \item A biased die is such that $\pr{4} = \frac{1}{10}$ and other scores being equally likely. The die is tossed twice. If $X$ is the 'number of fours seen', find the variance of the random variable $X$.\\
 % \input{exemplar/12/13/3/27/main.tex}
 % \item One million random numbers are generated from a statistically stationary process with a Gaussian distribution with mean zero and standard deviation $\sigma_0$.\\
 %The $\sigma_0$ is estimated by randomly drawing out 10,000 number of samples ($x_n$). The estimates $\hat{\sigma}^2_1$ and $\hat{\sigma}^2_2$ are computed in the following two ways:
@@ -242,7 +234,7 @@ E($X^{2}$)is equal to\\
 %\end{enumerate} \hfill ( GATE EE 2023) \\
 %\solution
 % \input{gate/EE/2023/25/main.tex}
-\item If X is the number of tails in three tosses of  coin, determine the standard deviation of X. \\
+\item If $X$ is the number of tails in three tosses of  coin, determine the standard deviation of $X$. \\
 % \input{exemplar/12/13/3/12/main.tex}
 \item In a game, a man wins a rupee for a six and loses a rupee for any other number
 when a fair die is thrown. The man decided to throw a die thrice but to quit as
@@ -251,5 +243,5 @@ and when he gets a six. Find the expected value of the amount he wins / loses.\\
 \item Find the mean of $\bnm{4}{\frac{1}{3}}$.
 \item Two cards are drawn simultaneously (or successively without replacement) from a well shuffled pack of 52 cards. Find the mean, variance and standard deviation of the number of kings.
 \item 	Find the variance of the number obtained on a throw of an unbiased die
-\item 	Let a pair of dice be thrown and the random variable X be the sum of the numbers that appear on the two dice. Find the mean or expectation of X.
+\item 	Let a pair of dice be thrown and the random variable $X$ be the sum of the numbers that appear on the two dice. Find the mean or expectation of $X$.
 \end{enumerate}
