\input{exemplar/12/13/3/15/main.tex} done

--- a/app/moment.tex
+++ b/app/moment.tex
@@ -1,6 +1,7 @@
 \begin{enumerate}[label=\thesubsection.\arabic*.,ref=\thesubsection.\theenumi]
 	\item The mean of an rv is defined as
 		\begin{align}
+			\label{moment:def}
 			\mu = E\brak{X} = \sum_k kp_X(k)
 		\end{align}
 	\item The variance of an rv is defined as
