--- a/ncert/moment.tex
+++ b/ncert/moment.tex
@@ -35,23 +35,29 @@ Choose the correct answer in each of the following:
 \item The mean of the numbers obtained on throwing a die having written 1 on three
 faces, 2 on two faces and 5 on one face is
 \begin{enumerate}
+	\begin{multicols}{4}
 \item 1
 \item 2
 \item 5
 \item $\frac{8}{3}$
+\end{multicols}
 \end{enumerate}
 %
 \item Suppose that two cards are drawn at random from a deck of cards. Let X be the
 number of aces obtained. Then the value of E(X) is
 \begin{enumerate}
+	\begin{multicols}{4}
 \item $\frac{37}{221}$
 \item $\frac{5}{13}$
 \item $\frac{1}{13}$
 \item $\frac{2}{13}$
+\end{multicols}
 \end{enumerate}
 %
-\item Suppose $10000$ tickets are sold in a lottery each for Re. $1$. First prize is of Rs $3000$ and the second prize is of Rs $2000$. There are three third prizes of Rs. $500$ each. If you buy one ticket, what is your expectation.
-% \input{exemplar/12/13/3/15/main.tex}
+\item Suppose $10000$ tickets are sold in a lottery each for Re. $1$. First prize is of Rs $3000$ and the second prize is of Rs $2000$. There are three third prizes of Rs. $500$ each. If you buy one ticket, what is your expectation ?
+	\\
+	\solution
+ \input{exemplar/12/13/3/15/main.tex}
 \item Consider the probability distribution of a random variable $X$:
 \begin{table}[H]
         \centering
