update after a long time

--- a/ncert/moment.tex
+++ b/ncert/moment.tex
@@ -61,7 +61,7 @@ number of aces obtained. Then the value of E(X) is
 \item Consider the probability distribution of a random variable $X$:
 \begin{table}[H]
         \centering
-% \input{exemplar/12/13/3/24/tables/tab.tex}
+ \input{exemplar/12/13/3/24/tables/tab.tex}
         \label{tab:exemplar/12/13/3/24}
     \end{table}
 Calculate
