--- a/exemplar/12/13/3/24/tables/tab.tex
+++ b/exemplar/12/13/3/24/tables/tab.tex
@@ -204,7 +204,7 @@
 
 \hhline{|-|-|-|-|-|-}
 	 \multicolumn{1}{|p{\gnumericColA}|}%
-	{\gnumericPB{\centering}\gnumbox{X}}
+	{\gnumericPB{\centering}\gnumbox{$X$}}
 	&\multicolumn{1}{p{\gnumericColB}|}%
 	{\gnumericPB{\centering}\gnumbox{0}}
 	&\multicolumn{1}{p{\gnumericColC}|}%
@@ -218,7 +218,7 @@
 \\
 \hhline{|------|}
 	 \multicolumn{1}{|p{\gnumericColA}|}%
-	{\gnumericPB{\centering}\gnumbox{P(X)}}
+	{\gnumericPB{\centering}\gnumbox{$P(X)$}}
 	&\multicolumn{1}{p{\gnumericColB}|}%
 	{\gnumericPB{\centering}\gnumbox{0.1}}
 	&\multicolumn{1}{p{\gnumericColC}|}%
