--- a/ncert/moment.tex
+++ b/ncert/moment.tex
@@ -58,19 +58,21 @@ number of aces obtained. Then the value of E(X) is
 	\\
 	\solution
  \input{exemplar/12/13/3/15/main.tex}
-\item Consider the probability distribution of a random variable $X$:
-\begin{table}[H]
-        \centering
- \input{exemplar/12/13/3/24/tables/tab.tex}
-        \label{tab:exemplar/12/13/3/24}
-    \end{table}
+\item Consider the probability distribution of a random variable $X$ given in 
+        \tabref{tab:exemplar/12/13/3/24}.
 Calculate
-\begin{enumerate}[label=(\roman*)]
+\begin{enumerate}
 \item var$\brak{X}$
 \item var$\brak{\frac{X}{2}}$
 \end{enumerate}
+\begin{table}[H]
+        \centering
+ \input{exemplar/12/13/3/24/tables/tab.tex}
+ \caption{}
+        \label{tab:exemplar/12/13/3/24}
+    \end{table}
 \solution
-% \input{exemplar/12/13/3/24/main.tex}
+ \input{exemplar/12/13/3/24/main.tex}
 \item The random variable $X$ can take only the values $0,1,2$. Given that $\pr{X=0}=\pr{X=1}=p$ and that $E\brak{X^2} = E\brak{X}$, find the value of $p$.
 \\
 % \input{exemplar/12/13/3/36/main.tex}
