--- a/app/moment.tex
+++ b/app/moment.tex
@@ -40,7 +40,7 @@ yielding
 \begin{align}
 	\text{var}\brak{{aX}}&=E\brak{{a^2X^2}}-\sbrak{E\brak{{aX}}}^2\\
 &=a^2\sbrak{E\brak{X^2}-\sbrak{E\brak{X}}^2}\\
-&=a^2{\text{var}\brak{X}}{4}
+&=a^2{\text{var}\brak{X}}
 \end{align}
 	\item For $X \sim \bnm{n}{p}$,
 		\begin{align}
