--- a/app/moment.tex
+++ b/app/moment.tex
@@ -40,8 +40,9 @@ yielding
 \begin{align}
 	\text{var}\brak{{aX}}&=E\brak{{a^2X^2}}-\sbrak{E\brak{{aX}}}^2\\
 &=a^2\sbrak{E\brak{X^2}-\sbrak{E\brak{X}}^2}\\
-&=a^2{\text{var}\brak{X}}
+%&=a^2{\text{var}\brak{X}}
 \end{align}
+			yielding \eqref{var:homo-l}.
 	\item For $X \sim \bnm{n}{p}$,
 		\begin{align}
 			\label{moment-mean-var}
