--- a/ncert/moment.tex
+++ b/ncert/moment.tex
@@ -75,14 +75,22 @@ Calculate
  \input{exemplar/12/13/3/24/main.tex}
 \item The random variable $X$ can take only the values $0,1,2$. Given that $\pr{X=0}=\pr{X=1}=p$ and that $E\brak{X^2} = E\brak{X}$, find the value of $p$.
 \\
-% \input{exemplar/12/13/3/36/main.tex}
-\item Find the variance of distribution.
-\begin{table}[!ht]
-% \input{exemplar/12/13/3/37/tables/table.tex}
-\end{table}\\
-% \input{exemplar/12/13/3/37/main.tex}
-\item Two cards are drawn successively without replacement from a well shuffled deck of cards. Find the mean and standard variation of random variable $$X$$ where $X$ is the number of aces.
-% \input{e$X$emplar/12/13/3/53/main.tex}
+\solution
+ \input{exemplar/12/13/3/36/main.tex}
+\item Find the variance of distribution
+ in \tabref{exemplar/12/13/3/37/tables}
+	\begin{table}[H]
+		\centering
+ \input{exemplar/12/13/3/37/tables/table.tex}
+ \caption{}
+ \label{exemplar/12/13/3/37/tables}
+\end{table}
+\solution
+ \input{exemplar/12/13/3/37/main.tex}
+\item Two cards are drawn successively without replacement from a well shuffled deck of cards. Find the mean and standard variation of random variable $X$ where $X$ is the number of aces.
+	\\
+\solution
+ \input{exemplar/12/13/3/53/main.tex}
 \item The probability distribution of a discrete random variable $X$ is given as under:
 \begin{table}[ht]
     \centering
