--- a/ncert/moment.tex
+++ b/ncert/moment.tex
@@ -91,8 +91,9 @@ Calculate
 	\\
 \solution
  \input{exemplar/12/13/3/53/main.tex}
-\item The probability distribution of a discrete random variable $X$ is given as under:
-\begin{table}[ht]
+\item The probability distribution of a discrete random variable $X$ is given 
+in \tabref{exemplar/12/13/3/50/table}.
+\begin{table}[H]
     \centering
 \begin{tabular}{|c|c|c|c|c|c|c|}
 \hline
@@ -101,14 +102,17 @@ $X$ & 1 & 2 & 4 & 2A & 3A & 5A  \\
 \pr{X} & $\frac{1}{2}$ & $\frac{1}{5}$ & $\frac{3}{25}$ & $\frac{1}{10}$ & $\frac{1}{25}$ & $\frac{1}{25}$ \\
 \hline
 \end{tabular} 
-\end{table}\\
-Calculate:
+\caption{}
+\label{exemplar/12/13/3/50/table}
+\end{table}
+Calculate
 \begin{enumerate}
-\item The value of A if E(X) = 2.94
+\item The value of $A$ if $E(X)$ = 2.94.
 \item Variance of $X$.
 \end{enumerate}
-% \input{exemplar/12/13/3/50/main.tex}
-\item The probability distribution of a random variable $X$ is given as under:
+\solution 
+ \input{exemplar/12/13/3/50/main.tex}
+\item The probability distribution of a random variable $X$ is given as under
 \begin{align*}
     p_X(x) =
     \begin{cases}
@@ -117,51 +121,51 @@ Calculate:
         0 & \text{otherwise}
     \end{cases}
 \end{align*}
-where k is a constant. Calculate:
+where $k$ is a constant. Calculate
 \begin{enumerate}
     \item $E\brak{X}$
     \item $E\brak{3X^2}$
     \item $\pr{X \geq 4}$
 \end{enumerate}
-% \input{exemplar/12/13/3/51/main.tex}
-\item Two probability distributions of the discrete random variable $X$ and $Y$ are given below.\\
-\begin{table}[h!]
-\begin{minipage}{0.45\linewidth}
- \begin{center}
-  \caption{Table-1}
-\begin{tabular}{|r|l|c|l|c|}
+\solution
+ \input{exemplar/12/13/3/51/main.tex}
+\item Two probability distributions of the discrete random variable $X$ and $Y$ are given below.
+\begin{table}[H]
+\centering
+\begin{minipage}{0.48\columnwidth}
+\centering
+\caption{}
+\label{tab:X}
+\begin{tabular}{|c|c|c|c|c|}
 \hline
-$X$ & 0 & 1 & 2 & 3\\
-\hline
-$P(X)$ & $\frac{1}{5}$ & $\frac{2}{5}$ & $\frac{1}{5}$ & $\frac{1}{5}$ \\
-\hline
+$X$    & 0 & 1 & 2 & 3 \\ \hline
+$P(X)$ & $\frac{1}{5}$ & $\frac{2}{5}$ & $\frac{1}{5}$ & $\frac{1}{5}$ \\ \hline
 \end{tabular}
-\end{center}
 \end{minipage}
-\end{table}
-%
-\begin{table}[h!]
-\begin{minipage}{0.45\linewidth}
- \begin{center}
-  \caption{Table-2}
-\begin{tabular}{|r|l|c|l|c|}
+\hfill
+\begin{minipage}{0.48\columnwidth}
+\centering
+\caption{}
+\label{tab:Y}
+\begin{tabular}{|c|c|c|c|c|}
 \hline
-$Y$ & 0 & 1 & 2 & 3\\
-\hline
-$P(Y)$ & $\frac{1}{5}$ & $\frac{3}{10}$ & $\frac{2}{5}$ & $\frac{1}{10}$ \\
-\hline
+$Y$    & 0 & 1 & 2 & 3 \\ \hline
+$P(Y)$ & $\frac{1}{5}$ & $\frac{3}{10}$ & $\frac{2}{5}$ & $\frac{1}{10}$ \\ \hline
 \end{tabular}
-\end{center}
 \end{minipage}
 \end{table}
 Prove that $E\brak{Y^2}=2E\brak{X}$\\
-\solution \\
-% \input{exemplar/12/13/3/30/main.tex}
-\item For the following probability distribution determine standard deviation of the random variable $X$.
+\solution 
+ \input{exemplar/12/13/3/30/main.tex}
+\item For the following probability distribution 
+ in \tabref{tab:exemplar/12/13/3/26/tables},
+	determine the standard deviation of the random variable $X$.
 \begin{table}[h]
-% \input{exemplar/12/13/3/26/tables/table.tex}
+ \input{exemplar/12/13/3/26/tables/table.tex}
+ \caption{}
+ \label{tab:exemplar/12/13/3/26/tables}
 \end{table}\\
-% \input{exemplar/12/13/3/26/main.tex}
+ \input{exemplar/12/13/3/26/main.tex}
 \item Let $X$ be a discrete random variable whose probability distribution is defined as follows:
 \begin{align*}
 \pr {X=x} =
