--- a/ncert/moment.tex
+++ b/ncert/moment.tex
@@ -160,42 +160,35 @@ Prove that $E\brak{Y^2}=2E\brak{X}$\\
 \item For the following probability distribution 
  in \tabref{tab:exemplar/12/13/3/26/tables},
 	determine the standard deviation of the random variable $X$.
-\begin{table}[h]
+\begin{table}[H]
+	\centering
  \input{exemplar/12/13/3/26/tables/table.tex}
  \caption{}
  \label{tab:exemplar/12/13/3/26/tables}
-\end{table}\\
- \input{exemplar/12/13/3/26/main.tex}
+\end{table}
+\solution 
+\input{exemplar/12/13/3/26/main.tex}
 \item Let $X$ be a discrete random variable whose probability distribution is defined as follows:
 \begin{align*}
 \pr {X=x} =
 \begin{cases} 
-k(x+1) &,x =  1,2,3,4\\
-2kx &, x = 5,6,7\\
-0 &, otherwise
+k(x+1) & x =  1,2,3,4,\\
+2kx & x = 5,6,7,\\
+0 & otherwise
 \end{cases}
 \end{align*}
 where $k$ is a constant. Calculate
-\begin{enumerate}[label=(\roman*)]
+\begin{enumerate}
 \item the value of $k$
-\item E\brak{X}
+\item $E\brak{X}$
 \item Standard deviation of $X$
 \end{enumerate}
 \solution
-\\
-% \input{ncert/12/13/3/49/main.tex}
-\item The probability distribution of a discrete random variable $X$ is given as under:
-\begin{table}[!ht]
-% \input{exemplar/12/13/3/50a/tables/spectral.tex}
-\end{table}\\
-Calculate:
-\begin{enumerate}[label=\alph*)]
-\item The value of $A$ if $E(X)$ =2.94
-\item Variance of $X$.
-\end{enumerate}
-% \input{exemplar/12/13/3/50a/main.tex}
-\item A discrete random variable $X$ has the probability distribution given as below:
+ \input{ncert/12/13/3/49/main.tex}
+\item A discrete random variable $X$ has the probability distribution given 
+ in \tabref{tab:exemplar/12/13/3/10/}.
 \begin{table}[H]
+	\centering
 \begin{tabular}{|c|c|c|c|c|}
 \hline
 $X$ & 0.5 & 1 & 1.5 & 2 \\
@@ -203,13 +196,15 @@ $X$ & 0.5 & 1 & 1.5 & 2 \\
 P($X$) & $k$ & $k^{2}$ & $2k^{2}$ & $k$ \\
 \hline
 \end{tabular}
+\caption{}
+ \label{tab:exemplar/12/13/3/10/}
 \end{table}
 \begin{enumerate}
-\item{Find the value of $k$}
-\item{Determine the mean of the distribution}
+\item Find the value of $k$
+\item Determine the mean of the distribution.
 \end{enumerate}
-\solution \\
-% \input{exemplar/12/13/3/10/main.tex}
+\solution 
+ \input{exemplar/12/13/3/10/main.tex}
 \item There are 5 cards numbered 1 to 5, one number on one card. Two cards are drawn at random without replacement. Let $X$ denote the sum of the numbers on two cards drawn. Find the mean and variance of $X$.
 % \input{exemplar/12/13/3/55/main.tex}
 \item For the following probability distribution:
